Fixed grid overlapping for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -413,7 +413,7 @@ button:hover, button:focus {
     }
 
     .skills-container {
-        max-height: 100vh;
+        /* max-height: 100vh; */
         padding: 70px 20px 0 20px;
         margin: 0;
         grid-template-columns: repeat(2, 1fr);
@@ -433,7 +433,7 @@ button:hover, button:focus {
     }
 
     .projects-container {
-        max-height: 100vh;
+        /* max-height: 100vh; */
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 20px;
         margin: 0;
@@ -450,7 +450,7 @@ button:hover, button:focus {
 
     .contact-container {
         padding-top: 35vh;
-        max-height: 100vh;
+        /* max-height: 100vh; */
     }
 
     .form-container {
